# docs/swagger.json
@@ -1993,6 +1993,58 @@
                 }
             }
         },
+        "/ideas/{id}/liked": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Check if the current user has liked an idea by its ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "likes"
+                ],
+                "summary": "Check if user liked an idea",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Idea ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HasLikedResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ideas/{id}/unlike": {
             "delete": {
                 "security": [
@@ -2985,6 +3037,14 @@
                 },
                 "reward_type_id": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.HasLikedResponse": {
+            "type": "object",
+            "properties": {
+                "has_liked": {
+                    "type": "boolean"
                 }
             }
         },
