# internal/dto/like.go
@@ -5,3 +5,7 @@ import "github.com/google/uuid"
 type LikeRequest struct {
 	IdeaID uuid.UUID `json:"idea_id"`
 }
+
+type HasLikedResponse struct {
+	HasLiked bool `json:"has_liked"`
+}
